--- a/FTP_Server/.project
+++ b/FTP_Server/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>FTP_Client</name>
+	<name>FTP_Server</name>
 	<comment></comment>
 	<projects>
 	</projects>
