EL NUEVO PROYECTO QUE SI QUE FUNCIONA  ALABADO SEA  EL SOL

--- a/FTP_Server_v2/.project
+++ b/FTP_Server_v2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>FTP_Client</name>
+	<name>FTP_Server_v2</name>
 	<comment></comment>
 	<projects>
 	</projects>
